# patreonsync

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ps3/: __init__.py  main.py
ps3/addressbook/: AddressBook.py  addressbook.schema
ps3/bot/: Patroniser.py  __init__.py
ps3/bot/traits/: Bouncer.py  PA.py  Trait.py  __init__.py  invites.schema  rooms.schema
ps3/subscribers/: GuestListUtils.py  YamlGuestList.py  __init__.py
ps3/subscribers/patreon/: GuestList.py  PatreonClient.py  __init__.py
ps3/util/: Community.py  Limiter.py  Matrix.py  TokenRefresher.py  __init__.py
